--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -300,7 +300,7 @@
 }
 
 .modal-save-btn {
-  background: #9fa6ad;
+  background: #3a7e56;
   color: #fff;
   display: flex;
   align-items: center;
